updating swagger contracts. This implies new changes to the code. So now, the api makes an endpoint available to send crypto news to the user
